jumping girl image adjusment, customer rating add and fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,136 +1,287 @@
-*{
-  margin: 0;
-  padding:0;
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
-i{
-    color: rgb(174, 172, 172)!important;
+@media (prefers-reduced-motion: no-preference) {
+  :root {
+    scroll-behavior: smooth;
+  }
 }
-body{
-    /* background-color: rgb(152, 68, 68); */
-    font-size: 1.1rem!important;
-}
-input::placeholder{
-    color:rgb(109, 106, 106);
-}
-ul{
-    padding: 0!important;
+* {
     margin: 0;
+    padding: 0;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-li{
+
+i {
+    color: rgb(174, 172, 172) !important;
+
+}
+
+body {
+    /* background-color: rgb(152, 68, 68); */
+    font-size: 1.1rem !important;
+}
+
+input::placeholder {
+    color: rgb(109, 106, 106);
+}
+
+ul {
+    padding: 0 !important;
+    /* margin: 0!important; */
+}
+
+li {
     list-style: none;
     /* margin: 0 1.6rem; */
 }
 
-a{
-    padding:10px 0!important;
-    text-decoration: none!important;
+a {
+    padding: 10px 0 !important;
+    text-decoration: none !important;
     color: #000 !important;
 }
-.dashboard{
-    font-weight: 600!important;
+
+.dashboard {
+    font-weight: 600 !important;
     font-size: 1.2rem;
 }
 
-.btn-check:focus+.btn, .btn:focus {
-    box-shadow: none!important;
+.btn-check:focus+.btn,
+.btn:focus {
+    box-shadow: none !important;
 }
 
-.card{
-    margin:0 0 !important;  
-    padding: 0 10px!important;
-    background-color: #fff!important;
-    border-radius: 0px!important;
+.card {
+    margin: 0 0 !important;
+    padding: 0 10px !important;
+    background-color: #fff !important;
+    border-radius: 0px !important;
     /* box-shadow: 1px 2px 4px 10px #eee; */
 }
-.sidebar{
-    height: 100vh;
+
+.sidebar {
+    height: 200vh;
     /* background-color: #eee; */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding:.75rem 0;
+    padding: .75rem 0;
     margin: 0 auto;
 }
 
 /* topbar_input_form_search */
-.searchbar input{
+.searchbar input {
     width: 100%;
     border: none;
-    outline: none!important;
-    
+    outline: none !important;
+
 }
-.searchbar input:focus{
+
+.searchbar input:focus {
     outline: none;
 
 }
 
-.searchbar{
+.searchbar {
     /* display: flex;
     justify-content: flex-start;
     flex-direction: column; */
     width: 100%;
-    padding:0 0;
+    padding: 0 0;
+
 }
 
-.topbar_search{
+ h1{
+    font-weight: 700!important;
+}
+
+.topbar_search {
     /* border-radius: .75rem; */
-    padding:1rem 1rem;
+    padding: 1rem 1rem;
     width: 100%;
 }
 
-.logo{
+.logo {
     display: flex;
     width: 100%;
     max-width: 100%;
     /* padding:0 1rem; */
 }
 
-.header{
+.header {
     display: flex;
     height: 50vh;
     justify-content: center;
     align-items: center;
-    padding:0 0 0 4rem;
+    padding: 0 0 0 4rem;
     font-weight: 400;
     /* font-family:Verdana, Geneva, Tahoma, sans-serif; */
 }
+
+.pipline {
+    top: 5rem;
+
+    
+}
+
 @media (max-width:575px) {
-    .header{
-        padding:0 0 0 2.4rem;
+    .header {
+        padding: 0 0 0 2.4rem;
     }
-    .topbar_search{
+
+    .topbar_search {
         /* border-radius: .75rem; */
-        padding:.75rem .65rem;
+        padding: .75rem .65rem;
         width: 100%;
     }
-    input::placeholder{
-        color:rgb(109, 106, 106);
-        font-size:14px;
-        }
-        .searchbar input{
-            width: 98%;
 
-            
-        }
+    input::placeholder {
+        color: rgb(109, 106, 106);
+        font-size: 14px;
+    }
 
-        .mapReturn{
-         margin-top:5rem;
-         flex-wrap: wrap;
-        }
+    .searchbar input {
+        width: 98%;
+
+
+    }
+
+    .mapReturn {
+        margin-top: 5rem;
+        flex-wrap: wrap;
+    }
+
+    .sidebar ul li a {
+        font-size: 1.2rem !important;
+    }
+
+    .pipline {
+        top: 1.9rem;
+    
+        
+    }
 }
-.header p{
+
+@media (min-width:575px) and (max-width:768px) {
+    .sidebar ul li a {
+
+        font-size: .8rem !important;
+    }
+
+    a {
+        font-size: .8rem !important;
+    }
+
+    .card {
+        padding: 15px !important;
+    }
+
+    input::placeholder {
+        color: rgb(109, 106, 106);
+        font-size: .9rem;
+    }
+}
+
+.header p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: .9rem;
 }
 
-.elements{
+.elements {
     margin-top: 22rem;
 }
-.mapReturn{
+
+.mapReturn {
     display: flex;
     justify-content: space-between;
-    margin:.75rem 0;
+    margin: .75rem 0;
     flex-direction: row;
 }
+
+.Trusted_h1 {
+    cursor: pointer;
+    font-size: 2rem;
+    font-weight: 700 !important;
+}
+
+.Trusted_h1:hover {
+    color: rgb(68, 65, 65);
+}
+
+.Customcard {
+    margin-top:11rem;
+    margin-bottom: 6rem;
+    padding: 3rem 0;
+    border-top: 2px solid #eee;
+    border-bottom: 2px solid #eee;
+    box-shadow: 0 0 0 3px  #eee;
+
+}
+
+@media (min-width:768px) {
+    .Customcard {
+        margin-top: 3rem;
+    }
+}
+
+.smallTech{
+    font-size: .6rem;
+}
+.star{
+    font-size: 1.9rem;
+    font-weight: 800;
+    padding:0;
+    margin: 0;
+}
+
+.Salesloft,
+.ZETWORK,
+.entropick,
+.capilary {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 2rem;
+    font-weight: 700;
+
+}
+
+
+
+.auditoria {
+    font-size: 2rem !important;
+    font-weight: 200 !important;
+}
+
+
+
+/* Jumping girl  */
+/* Jumping girl  */
+/* Jumping girl  */
+
+.girl_img{
+    max-width: 90%;
+}
+
+.leftcard{
+    height: 50vh;
+    display: flex;
+    justify-content: start;
+    flex-direction: column;
+    
+}
+.rightcard{
+    height: 50vh;
+    display: flex;
+    justify-content: end;
+    flex-direction: column;
+}
+
+ .rightcard .card{
+ border-radius: .75rem!important;
+}
+.leftcard .card{
+    border-radius: .75rem!important;
+   }
